<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Volume Control</string>
    


	<string name="loudness_intensity">Loudness intensity</string>
	<string name="minimum_volume">Minimum volume</string>
	<string name="maximum_volume">Maximum volume</string>
	<string name="trigger_interval">Trigger interval</string>
	<string name="blinking_flash_on">Blinker flash on incoming calls is enabled</string>
	<string name="blinking_flash_off">Blinker flash on incoming calls is disabled</string>
	<string name="volume_control_running">Volume control is running</string>
	<string name="volume_control_stopped">Volume control is stopped</string>
	

	<string name="positive_button">OK</string>
	<string name="unable_acquire_microphone">Unable to acquire the microphone.\nPlease close other apps that use it and then restart Volume Control.</string>
	<string name="error">An error has occurred</string>
	
	<string name = "seconds">seconds</string>

</resources>
