<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<LinearLayout
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:measureWithLargestChild="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    tools:context="com.donnarumma.ciro.volumecontrol.activities.MainActivity" >

    <TextView
        android:id="@+id/label_loudness_intensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loudness_intensity" />

    <TextView
        android:id="@+id/progress_view_loudness_intensity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/clip_drawable"
        android:gravity="center" />

    <TextView
        android:id="@+id/label_minimum_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum_volume" />

    <SeekBar
        android:id="@+id/seekBar_minimum_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_maximum_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_volume" />

    <SeekBar
        android:id="@+id/seekBar_maximum_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


       
	<TextView
        android:id="@+id/label_trigger_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trigger_interval" />
	
	<SeekBar
        android:id="@+id/seekBar_trigger_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ToggleButton
        android:id="@+id/toggle_flash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/blinking_flash_on"
        android:textOff="@string/blinking_flash_off" />

    <ToggleButton
        android:id="@+id/toggle_volume_control_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/volume_control_running"
        android:textOff="@string/volume_control_stopped" />

</LinearLayout>
</ScrollView>